Replaced thunder client with rest client To more easily run and manage api calls

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,8 @@
 {
-    "recommendations": [
-        "mquandalle.graphql",
-        "esbenp.prettier-vscode",
-        "ms-azuretools.vscode-docker"
-    ]
+  "recommendations": [
+    "mquandalle.graphql",
+    "esbenp.prettier-vscode",
+    "ms-azuretools.vscode-docker",
+    "humao.rest-client"
+  ]
 }
